# wooster-django

./: .env-sample-production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  production.yaml  pyproject.toml  render.yaml  requirements-freeze.txt
.envs/.production/: .django  .postgres
compose/production/django/: Dockerfile  entrypoint
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker_tools/: Dockerfile
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  linux-py3.11-production.txt  linux-py3.12-local.txt  linux-py3.12-production.txt  local.txt  production.txt  win32-py3.11-local.txt
requirements/in/: base.in  local.in  production.in
wooster_django/: conftest.py
wooster_django/basemodels/: apps.py  models.py
wooster_django/basemodels/migrations/: 0001_initial.py  0002_delete_documentnumber.py
wooster_django/basemodels/models/: __init__.py  abstract.py  shared.py
wooster_django/carlog/: apps.py  models.py
wooster_django/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
wooster_django/customers/: admin.py  apps.py  models.py
wooster_django/customers/migrations/: 0001_initial.py
wooster_django/inventory/: admin.py  apps.py  models.py
wooster_django/inventory/migrations/: 0001_initial.py  0002_rename_internal_id_item_internal_identifier_and_more.py  0003_alter_item_options_alter_itemcategory_options_and_more.py  0004_alter_item_alternate_manufacturers_and_more.py  0005_alter_item_in_stock_amount.py  0006_alter_item_parent_item.py  0007_alter_item_parent_item.py  0008_item_common_color_item_item_categories_item_size_and_more.py  0009_history.py  0010_alter_history_amount.py
wooster_django/orders/: admin.py  apps.py  models.py  urls.py  views.py
wooster_django/orders/migrations/: 0001_initial.py  0002_orderitems_item_price.py  0003_order_number_alter_order_customer.py  0004_remove_order_name_alter_order_number.py  0005_rename_orderitems_orderitem.py  0006_order_notes_orderitem_notes_alter_orderitem_rank.py  0007_documentnumbers.py  0008_rename_documentnumbers_documentnumber.py  0009_invoice.py  0010_invoice_grand_total_invoice_subtotal_and_more.py  0011_invoice_project.py  0012_invoice_due_date.py
wooster_django/projects/: admin.py  apps.py  models.py
wooster_django/projects/management/commands/: excel_import.py
wooster_django/projects/migrations/: 0001_initial.py  0002_alter_project_project_number.py  0003_project_order.py  0004_rename_documentnumber_documentnumbers.py  0005_rename_documentnumbers_documentnumber.py
wooster_django/receipts/: forms.py  functions.py  models.py  tasks.py  urls.py  views.py
wooster_django/receipts/migrations/: 0001_initial.py  0002_alter_receipt_analyze_result_alter_receipt_merchant_and_more.py
wooster_django/templates/: base.html  menu.html
wooster_django/templates/invoices/: invoice.html
wooster_django/templates/receipts/: merchant_detail.html  merchant_form.html  receipt_form.html
wooster_django/tools/: apps.py  managers.py  models.py
wooster_django/users/: adapters.py  admin.py  apps.py  models.py  urls.py
wooster_django/users/migrations/: 0001_initial.py
wooster_django/users/tests/: test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
